# collectd-mumble

./: .gitignore
src/: Makefile  Makefile.am  Murmur.cpp  Murmur.h  collector.cpp  collector.h  config.h.in  configure  configure.ac  main.cpp  plugin.cpp
